--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -6,11 +6,20 @@
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
+
+  position: relative;
 }
 
 .homerunner-ground {
   background-color: darkolivegreen;
 
   width: 100%;
-  height: 100px;
+}
+
+.homerunner-player {
+  background-color: tomato;
+  width: 100px;
+  height: 200px;
+  position: absolute;
+  left: 100px;
 }
