--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -24,3 +24,12 @@
   position: absolute;
   left: 100px;
 }
+
+.homerunner-counter {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+
+  font-size: 3em;
+  color: white;
+}
