--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -8,6 +8,7 @@
   flex-direction: column;
 
   position: relative;
+  overflow: hidden;
 }
 
 .homerunner-ground {
@@ -18,16 +19,36 @@
 
 .homerunner-player {
   background-color: tomato;
-  width: 100px;
+  width: 70px;
   height: 200px;
 
   position: absolute;
-  left: 100px;
+  right: 1000px;
 
   transform: translateY(0px);
 
   transition-property: transform;
-  transition-duration: 240ms;
+  transition-duration: 400ms;
+
+  z-index: 2;
+}
+
+.homerunner-player-gfx {
+  width: 100px;
+  height: 200px;
+
+  position: absolute;
+  bottom: 0;
+  right: -15px;
+
+  z-index: 3;
+}
+
+.homerunner-player-gfx svg {
+  width: inherit;
+
+  position: absolute;
+  bottom: -105px;
 }
 
 .homerunner-counter {
@@ -46,5 +67,19 @@
 
   position: absolute;
   bottom: 100px;
-  right: 10px;
+  right: -100px;
+
+  z-index: 3;
+}
+
+.homerunner-bg {
+  width: 120px;
+  height: 300px;
+  background-color: rgb(53, 109, 48);
+
+  position: absolute;
+  bottom: 100px;
+  right: -100px;
+
+  z-index: 1;
 }
